Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -13,3 +13,5 @@ div {
 red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
+
+id.select the id, and mark its color as red
