--- a/main.css
+++ b/main.css
@@ -14,6 +14,6 @@ red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
 
-.red { /* this selects any elements with the red id */
+#red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
