Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -17,3 +17,6 @@ red { /* this selects any elements with the red id */
 #red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
+#orange {
+  border-top-color: 
+}
