--- a/main.css
+++ b/main.css
@@ -18,5 +18,8 @@ red { /* this selects any elements with the red id */
   border-top-color: #f00;
 }
 #orange {
+  border-top-color: #ffa500;
+}
+#yellow {
   border-top-color: 
 }
