--- a/main.css
+++ b/main.css
@@ -27,5 +27,5 @@ red { /* this selects any elements with the red id */
   border-top-color: #00bc3f
 }
 #blue {
-  border-top-color: 
+  border-top-color: #06f
 }
