--- a/main.css
+++ b/main.css
@@ -30,5 +30,8 @@ red { /* this selects any elements with the red id */
   border-top-color: #06f
 }
 #indigo {
+  border-top-color: #8a2be2
+}
+#violet {
   border-top-color: 
 }
